--- a/lyberies.ipynb
+++ b/lyberies.ipynb
@@ -23,8 +23,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "13ec158e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "also installing the dependencies 'generics', 'R6', 'stringi', 'pkgconfig', 'withr', 'dplyr', 'magrittr', 'purrr', 'stringr', 'tibble', 'tidyselect', 'cpp11'\n",
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "package 'generics' successfully unpacked and MD5 sums checked\n",
+      "package 'R6' successfully unpacked and MD5 sums checked\n",
+      "package 'stringi' successfully unpacked and MD5 sums checked\n",
+      "package 'pkgconfig' successfully unpacked and MD5 sums checked\n",
+      "package 'withr' successfully unpacked and MD5 sums checked\n",
+      "package 'dplyr' successfully unpacked and MD5 sums checked\n",
+      "package 'magrittr' successfully unpacked and MD5 sums checked\n",
+      "package 'purrr' successfully unpacked and MD5 sums checked\n",
+      "package 'stringr' successfully unpacked and MD5 sums checked\n",
+      "package 'tibble' successfully unpacked and MD5 sums checked\n",
+      "package 'tidyselect' successfully unpacked and MD5 sums checked\n",
+      "package 'cpp11' successfully unpacked and MD5 sums checked\n",
+      "package 'tidyr' successfully unpacked and MD5 sums checked\n",
+      "\n",
+      "The downloaded binary packages are in\n",
+      "\tC:\\Users\\MY PC\\AppData\\Local\\Temp\\Rtmp4mIXgQ\\downloaded_packages\n"
+     ]
+    }
+   ],
+   "source": [
+    "install.packages(\"tidyr\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "33aae45d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "also installing the dependencies 'rprojroot', 'fs', 'diffobj', 'rematch2', 'brio', 'callr', 'desc', 'pkgload', 'praise', 'processx', 'ps', 'waldo', 'testthat', 'Matrix', 'MASS', 'lattice', 'boot', 'nlme', 'minqa', 'nloptr', 'Rcpp', 'RcppEigen'\n",
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "  There are binary versions available but the source versions are later:\n",
+      "       binary   source needs_compilation\n",
+      "fs      1.5.2    1.6.1              TRUE\n",
+      "MASS 7.3-58.2 7.3-58.3              TRUE\n",
+      "\n",
+      "  Binaries will be installed\n",
+      "package 'rprojroot' successfully unpacked and MD5 sums checked\n",
+      "package 'fs' successfully unpacked and MD5 sums checked\n",
+      "package 'diffobj' successfully unpacked and MD5 sums checked\n",
+      "package 'rematch2' successfully unpacked and MD5 sums checked\n",
+      "package 'brio' successfully unpacked and MD5 sums checked\n",
+      "package 'callr' successfully unpacked and MD5 sums checked\n",
+      "package 'desc' successfully unpacked and MD5 sums checked\n",
+      "package 'pkgload' successfully unpacked and MD5 sums checked\n",
+      "package 'praise' successfully unpacked and MD5 sums checked\n",
+      "package 'processx' successfully unpacked and MD5 sums checked\n",
+      "package 'ps' successfully unpacked and MD5 sums checked\n",
+      "package 'waldo' successfully unpacked and MD5 sums checked\n",
+      "package 'testthat' successfully unpacked and MD5 sums checked\n",
+      "package 'Matrix' successfully unpacked and MD5 sums checked\n",
+      "package 'MASS' successfully unpacked and MD5 sums checked\n",
+      "package 'lattice' successfully unpacked and MD5 sums checked\n",
+      "package 'boot' successfully unpacked and MD5 sums checked\n",
+      "package 'nlme' successfully unpacked and MD5 sums checked\n",
+      "package 'minqa' successfully unpacked and MD5 sums checked\n",
+      "package 'nloptr' successfully unpacked and MD5 sums checked\n",
+      "package 'Rcpp' successfully unpacked and MD5 sums checked\n",
+      "package 'RcppEigen' successfully unpacked and MD5 sums checked\n",
+      "package 'lme4' successfully unpacked and MD5 sums checked\n",
+      "\n",
+      "The downloaded binary packages are in\n",
+      "\tC:\\Users\\MY PC\\AppData\\Local\\Temp\\Rtmp4mIXgQ\\downloaded_packages\n"
+     ]
+    }
+   ],
+   "source": [
+    "install.packages(\"lme4\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "78d3769c",
    "metadata": {},
    "outputs": [],
    "source": []
